data/all_generated_tests/raw_wast_tests/call_InvalidorInconsistentControlFlowGraph_3573.wast
;; 2. **Incorrect Loop Structure with Function Call**:    Design a test with a function call inside a loop where the loop's boundaries and conditions could lead to misalignment or unbalanced stack operations. This ensures that the CFG correctly manages the loop's control flow when encountering call instructions.

(assert_invalid
  (module
    (func $correct-loop-structure (result i32)
      (local i32)
      (block
        (loop
          (call 0)
          (br_if 0 (i32.eqz (local.get 0)))
          (local.set 0 (i32.sub (local.get 0) (i32.const 1)))
        )
      )
    )
    (func (result i32) (i32.const 0))
  )
  "incorrect loop structure with function call"
)